html/css/product-multilingual.css
/*
 This file is part of Product Opener.

 Product Opener
 Copyright (C) 2011-2019 Association Open Food Facts
 Contact: contact@openfoodfacts.org
 Address: 21 rue des Iles, 94100 Saint-Maur des Fossés, France

 Product Opener is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as
 published by the Free Software Foundation, either version 3 of the
 License, or (at your option) any later version.

 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.

 You should have received a copy of the GNU Affero General Public License
 along with this program.  If not, see <http:www.gnu.org/licenses/>.
*/

/*
 This CSS is used for tag boxes such as categories, labels, etc.
 It supercede the CSS of the jQuery plug-in, see:
 https://github.com/xoxco/jQuery-Tags-Input
 */

div.tagsinput {
    line-height: 1.2;
    resize: vertical; /* Make the box manually resizable, vertically (CSS3) */
}

div.tagsinput input {
    box-shadow: none;
}

div.tagsinput input:focus {
    background: none;
    border: none;
}

.ui-selectable { list-style-type: none; margin: 0; padding: 0; }

.ui-selectable img {
  vertical-align:middle;
}
.ui-selectee:hover { background: #FECA40; }
.ui-selected { background: #F39814; color: white; }

.command { margin-bottom:5px; }

label { margin-top: 20px; }

fieldset { margin-top: 15px; margin-bottom:15px;}

legend { font-size: 1.375em; margin-top:2rem; }

textarea {  height:8rem; }

.display { float:right; margin-top:10px;margin-bottom:10px; max-width:400px; }
.cropbox { max-width:100%; }
.cropimgdiv { width:100%; max-height:800px;}
.ingredients_image_full { max-height:400px }


.upload_image_div {
	padding-top:0.5rem;
}

.button_div {
	margin-top:0.5rem;
}

#label_new_code, #new_code { display: inline; margin-top: 0px; width:200px; }

th {
	font-weight:bold;
}

.contained {
	border:1px solid #ccc;
	padding:1rem;
}

ul.tabs {
	border-top:1px solid #ccc;
	border-left:1px solid #ccc;
	border-right:1px solid #ccc;
	background-color:#EFEFEF;
}

.tabs dd>a, .tabs .tab-title>a {
padding:0.5rem 1rem;
}

.tabs-content {
	background-color:white;
	padding:1rem;
	border-bottom:1px solid #ccc;
	border-left:1px solid #ccc;
	border-right:1px solid #ccc;
}

.select_add_language {
	border:0;
}


ul.tabs .select2-container--default .select2-selection--single {
	height:2.5rem;
	top:0;
	border:0;
	background-color: #0099ff;
	color: #FFFFFF;
	transition: background-color 300ms ease-out;
}

ul.tabs .select2-container--default .select2-selection--single:hover, ul.tabs .select2-container--default .select2-selection--single:focus {
	background-color: #007acc;
	color:#FFFFFF;
}

ul.tabs .select2-container--default .select2-selection--single .select2-selection__arrow b {
  border-color: #fff transparent transparent transparent;
	margin-top:4px;
}

ul.tabs .select2-container--default .select2-selection--single .select2-selection__placeholder {
	color:white;
}

ul.tabs .select2-container--default .select2-selection--single .select2-selection__rendered {
	line-height:2.5rem;
}

